--- a/public/style/main.css
+++ b/public/style/main.css
@@ -3,11 +3,20 @@ body {
   min-height: 100vh;
   flex-direction: column;
 }
-
 main {
   flex: 1 0 auto;
 }
 div.banner {
 	width: 100%;
 	height: 250px;
+}
+section#banner-bienvenida{
+	padding: 25px 0px;
+}
+.naranja{
+	border-color: #f4511e;
+	width: 150px;
+}
+section#form{
+	padding: 25px 0px;
 }
