--- a/public/assets/style/main.css
+++ b/public/assets/style/main.css
@@ -8,7 +8,7 @@ main {
 }
 .banner {
 	width: 100%;
-	height: 250px;
+	height: 200px;
 }
 section#banner-bienvenida{
 	padding: 25px 0px;
@@ -21,6 +21,6 @@ section#form{
 	padding: 25px 0px;
 }
 .card-panel {
-	padding-top: 1rem !important;
+	padding: 1.2rem !important;
 }
 .material-icons.md-grey { color: #424242; }
